crates/vouched/tests/ui/vouched/duplicate_error_name.stderr
error: error(...) can only be specified once
 --> tests/ui/vouched/duplicate_error_name.rs:5:1
  |
5 | #[vouched(error(name = SecondError))]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
