crates/vouched/tests/ui/vouched/duplicate_error_name.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(error(name = FirstError), len(1..))]
#[vouched(error(name = SecondError))]
struct DuplicateErrorName(String);

fn main() {}
